# duckdb-ip-lookup

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.local.json
benches/: data.rs  distributions.rs  first_less_specific_bench.rs
src/: lib.rs  ris_whois.rs
src/lib/: ris_whois.rs
test/sql/: ip_more_less_specific.test
tests/: benchmark_integration.rs
