[package]
name = "ip_more_less_specific"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "ip_more_less_specific"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.3.2", features = ["vscalar", "vscalar-arrow", "vtab-arrow", "vtab-loadable"] }
duckdb-loadable-macros = "0.1.9"
ipnet = "2.11.0"
ipnet-trie = "0.3.0"
itertools = "0.14.0"
libduckdb-sys = { version = "1.3.2", features = ["loadable-extension"] }
polars = { version = "0.50.0", features = ["decompress", "csv"] }
reqwest = "0.12.23"
