[package]
name = "ip_more_less_specific"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "ip_more_less_specific"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[[bench]]
name = "first_less_specific_bench"
harness = false

[dependencies]
# vtab-arrow seems to be needed even though it is not used
duckdb = { version = "1.3.2", features = ["vscalar", "vscalar-arrow", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.9"
libduckdb-sys = { version = "1.3.2", features = ["loadable-extension"] }

itertools = "0.14.0"

ipnet = "2.11.0"
ipnet-trie = "0.3.0"
s3-fifo = "0.1.8"

log = "0.4.27"
env_logger = "0.11.8"

reqwest = { version = "0.12.23" }
flate2 = { version = "1.0", features = ["rust_backend"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
arrow = "55.1.0"
parquet = "55.1.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["std_rng"] }
